{{$NEXT}}

0.10.3  2023-05-31T15:45:47+12:00
   - Fix handling of name space objects in C bindings; Eliminate
     some valgrind warnings.

0.10.2  2023-04-13T08:33:33+12:00
   - Fix clearNamespace() method

0.10.1  2023-03-30T08:15:47+13:00
   - Fix segfault in LibXML::Reader.new(:$file) on non-existent file
   - Consistently use $config.class-from() in ast-to-xml()

0.10.0  2023-03-06T06:15:27+13:00
   - Make LibXML::Item use :config for boxing (#97)
     Any config supplied by upstream was previously ignored and class mapping
     was expected to be done by `LibXML::Node`. This resulted in limited
     abilities of user code in controlling how boxing is done. See #94.
       Note that `LibXML::Node` still does its own class mapping because this
     is the point of final decision and in many cases it is invoked directly.
   - Added config attribute `with-cache` (#102). This defines whether
     simple caching based on node's `unique-key` should be used.
   - Fixed LibXML::EntityRef DOM class (#99). Remove local $.raw attribute
     and base it on LibXML::_Rawish. Like other node types.
   - Refactors:
     -- LibXML::Raw composition of xmlNode and xmlNs classes. These
        are now composed via the domNode parameterized role.
     -- Rename try() method to do() in various contexts, including
        parsing and validation.
     -- fix some types in bindings parameters and return types. Mostly,
        xmlNode -> anyNode,

0.9.10  2023-02-20T08:10:13+13:00
   - Lessen impact of #95 (.raku method handing). Override LibXML::Node:D
     raku() to call LibXML::Node:U raku().
   - Add intermediate domNode() role. This eases class composition
     and bypasses the need to nativecast raw nodes, when the type
     is known in advance. E.g. getElementsByTagName() is about
     25% faster.
   - Further optimize LibXML::Node::Set by nativecasting a CArray
     as a whole to the container type, rather than casting individual
     members.